--- a/app/src/main/res/layout/item_add_well.xml
+++ b/app/src/main/res/layout/item_add_well.xml
@@ -96,6 +96,23 @@
             />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/doneStructureBtn"
+            android:layout_width="@dimen/qb_px_80"
+            android:layout_height="@dimen/qb_px_40"
+            android:layout_marginEnd="@dimen/qb_px_10"
+            android:background="@drawable/btn_round_red"
+            android:text="@string/done"
+            android:visibility="gone"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            android:textSize="@dimen/qb_px_18"
+            android:layout_marginBottom="@dimen/qb_px_5"
+            app:layout_constraintTop_toBottomOf="@id/childRecyclerView"
+            app:layout_constraintBottom_toBottomOf="@id/addWellConstraintLayout"
+            app:layout_constraintEnd_toEndOf="@id/childRecyclerView"
+            />
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/backStructureBtn"
             android:layout_width="@dimen/qb_px_80"
             android:layout_height="@dimen/qb_px_40"
