--- a/app/src/main/res/layout/item_child_list.xml
+++ b/app/src/main/res/layout/item_child_list.xml
@@ -43,6 +43,7 @@ app:layout_constraintStart_toStartOf="parent">
         android:layout_height="@dimen/qb_px_50"
         android:background="@drawable/btn_white"
         android:gravity="center"
+        android:hint="first item"
         android:textSize="@dimen/qb_px_14"
         android:textStyle="normal"
         android:outlineSpotShadowColor="@color/black"
@@ -54,6 +55,7 @@ app:layout_constraintStart_toStartOf="parent">
         android:layout_height="@dimen/qb_px_50"
         android:background="@drawable/btn_white"
         android:gravity="center"
+        android:hint="second item"
         android:textSize="@dimen/qb_px_14"
         android:textStyle="normal"
         android:outlineSpotShadowColor="@color/black"
@@ -65,6 +67,7 @@ app:layout_constraintStart_toStartOf="parent">
         android:layout_height="@dimen/qb_px_50"
         android:background="@drawable/btn_white"
         android:gravity="center"
+        android:hint="third item"
         android:textSize="@dimen/qb_px_14"
         android:textStyle="normal"
         android:outlineSpotShadowColor="@color/black"
@@ -76,6 +79,7 @@ app:layout_constraintStart_toStartOf="parent">
         android:layout_height="@dimen/qb_px_50"
         android:background="@drawable/btn_white"
         android:gravity="center"
+        android:hint="fourth item"
         android:textSize="@dimen/qb_px_14"
         android:textStyle="normal"
         android:outlineSpotShadowColor="@color/black"
