--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -82,7 +82,7 @@
         android:id="@+id/testTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/test_str"
+        android:text="@string/equipments"
         app:layout_constraintTop_toBottomOf="@id/testBtn"
         app:layout_constraintStart_toStartOf="@id/testBtn"
         app:layout_constraintEnd_toEndOf="@id/testBtn"
