--- a/app/src/main/res/layout/item_add_well.xml
+++ b/app/src/main/res/layout/item_add_well.xml
@@ -81,11 +81,11 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/nextStructureBtn"
-            android:layout_width="@dimen/qb_px_80"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/qb_px_40"
             android:layout_marginEnd="@dimen/qb_px_10"
             android:background="@drawable/btn_round_red"
-            android:text="@string/next_btn"
+            android:text="Save and next"
             android:textColor="@color/white"
             android:textAllCaps="false"
             android:textSize="@dimen/qb_px_18"
